--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="HTML CSS JS Dictionary" />
   <meta name="description" content="Simple English Dictionary using HTML CSS JS and Dictionary API." />
   <meta name="author" content="Soham Manjrekar" />
-  <title>Simple Calculator</title>
+  <title>Password Generator</title>
   <link rel="icon" type="image/x-icon" href="/images/logo.png">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
@@ -79,10 +79,10 @@
           </a>
           <h1>
             Discovering <br>
-            Simple Calculator
+            Password Generator
           </h1>
           <p>
-            Simple Calculator using HTML CSS JS.
+            Simple Password Generator using HTML CSS JS.
           </p>
           <div>
             <a href="contact.html" class="slider-link">
@@ -94,13 +94,13 @@
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/project/cal1.jpg" alt="" style="height:70vh;">
+                <img src="images/project/pass1.jpg" alt="" style="height:70vh;">
               </div>
               <div class="carousel-item">
-                <img src="images/project/cal2.webp" alt="" style="height:70vh;">
+                <img src="images/project/pass2.jpg" alt="" style="height:70vh;">
               </div>
               <div class="carousel-item">
-                <img src="images/project/cal3.jpg" alt="" style="height:70vh;">
+                <img src="images/project/pass3.jpg" alt="" style="height:70vh;">
               </div>
             </div>
 
@@ -112,29 +112,37 @@
   </div>
 
   <section class="about_section layout_padding">
-    <h1 class="text-center">Simple Calculator</h1>
-    <div class="calculator">
-      <input type="text" id="result" readonly>
-      <div class="buttons">
-        <button class="clear">C</button>
-        <button class="operator">/</button>
-        <button class="operator">*</button>
-        <button class="operator">-</button>
-        <button class="number">7</button>
-        <button class="number">8</button>
-        <button class="number">9</button>
-        <button class="operator">+</button>
-        <button class="number">4</button>
-        <button class="number">5</button>
-        <button class="number">6</button>
-        <button class="equals">=</button>
-        <button class="number">1</button>
-        <button class="number">2</button>
-        <button class="number">3</button>
-        <button class="number">0</button>
-        <button class="decimal">.</button>
+    <h1 class="text-center">Password Generator</h1>
+    <div class="container container1">
+      <div class="result-container">
+        <span id="result"></span>
+        <button class="btn" id="clipboard" style="width:10vw;">
+          Copy
+        </button>
       </div>
-
+      <div class="settings">
+        <div class="setting">
+          <label for="length">Password Length</label>
+          <input type="number" name="length" id="length" min="4" max="20" value="20" />
+        </div>
+        <div class="setting">
+          <label for="uppercase">Include uppercase letters</label>
+          <input type="checkbox" name="uppercase" id="uppercase" checked />
+        </div>
+        <div class="setting">
+          <label for="lowercase">Include lowercase letters</label>
+          <input type="checkbox" name="lowercase" id="lowercase" checked />
+        </div>
+        <div class="setting">
+          <label for="numbers">Include numbers</label>
+          <input type="checkbox" name="numbers" id="numbers" checked />
+        </div>
+        <div class="setting">
+          <label for="symbols">Include symbols</label>
+          <input type="checkbox" name="symbols" id="symbols" checked />
+        </div>
+      </div>
+      <button class="btn btn-large" id="generate">Generate Password</button>
     </div>
   </section>
   <section class="about_section layout_padding">
@@ -147,13 +155,13 @@
             </h6>
             <div class="custom_heading-container">
               <h2>
-                Simple Calculator
+                Password Generator
               </h2>
               <hr>
             </div>
             <p>
-              This is a Simple Calculator. By using this calculator, you can be done your necessary time-eater
-              calculation easily.Of course, it's not an advanced calculator.
+              A simple, secure & clean way to generate random passcodes and passwords 🔑.Using uppercase and lowercase
+              letters, numbers, symbols(sign), you can create your own password with any number of characters you want.
             </p>
             <div>
 
